src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Action__c</fullName>
        <description>Link to directly edit account to be used on search result pages and reports</description>
        <formula>HYPERLINK(&quot;/&quot;&amp;Id&amp;&quot;/e&quot;, &quot;Edit&quot;, &quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Edit Account</inlineHelpText>
        <label>Action</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Domestic_Ultimate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The highest account in the region for the corporate account family per Dun &amp; Bradstreet.  Used on Named Accounts.  Set via WFR</description>
        <inlineHelpText>The highest account in the region for the corporate account family per Dun &amp; Bradstreet.  Used on Named Accounts.</inlineHelpText>
        <label>Domestic Ultimate</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Only Named Accounts can be selected as the Domestic Ultimate Parent</errorMessage>
            <filterItems>
                <field>$Source.IsNamed__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Domestic Children</relationshipLabel>
        <relationshipName>Domestic_Children</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IsNamed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The account is a named account if checked.  Named accounts can only be worked by the Enterprise team, all accounts worldwide, that are related to a named account are also named.
Locked field to be edited by Admin Only, with VR to block any accidental changes to accounts.
This field is referenced in LU filters for Ultimate and Domestic Parents, and multiple VRs</description>
        <inlineHelpText>The account is a named account if checked.  Named accounts can only be worked by the Enterprise team, all accounts worldwide, that are related to a named account are also named.</inlineHelpText>
        <label>Named</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Office_Location__c</fullName>
        <label>Office Location</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Chicago, IL</fullName>
                </value>
                <value>
                    <fullName>San Francisco, CA</fullName>
                </value>
                <value>
                    <fullName>Seattle, WA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ultimate_Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The highest account in the account corporate hierarchy, globally, per Dun &amp; Bradstreet&apos;s account &quot;family&quot; tree. 
Set via process</description>
        <inlineHelpText>The highest account in the account corporate hierarchy, globally, per Dun &amp; Bradstreet&apos;s account &quot;family&quot; tree.</inlineHelpText>
        <label>Ultimate Parent</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Global Children</relationshipLabel>
        <relationshipName>Global_Children</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>PlatinumandGoldSLACustomers</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>Platinum and Gold SLA Customers</label>
    </listViews>
    <sharingModel>Private</sharingModel>
</CustomObject>